# Antigravit

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.phoenix  README.md  connections.json  docker-compose.yml  eval_results.csv  eval_results_test.csv  experiment_annotated_v1.json  experiment_baseline_v1.json  experiment_traced_v1.json  pyproject.toml  requirements.txt  sample_data.db
backend/: config.py  main.py
backend/agents/: graph.py  llm.py  state.py
backend/agents/nodes/: architect.py  chat_responder.py  clarifier.py  coder.py  critic.py  error_handler.py  executor.py  final_responder.py  router.py  schema_responder.py  visualizer.py  viz_router.py
backend/agents/prompts/: architect_prompt.py  coder_prompt.py  critic_prompt.py  responder_prompt.py  router_prompt.py  visualizer_prompt.py
backend/api/: routes.py  websocket.py
backend/eval/: __init__.py  schema_snapshot.py
backend/eval/judges/: __init__.py  faithfulness.py  sql_similarity.py
backend/mcp/: manager.py  server.py  tools.py  validator.py
backend/models/: requests.py  responses.py
backend/observability/: __init__.py  phoenix.py
backend/utils/: database.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
infrastructure/: docker-compose.yml  init.sql  seed_data.py
scripts/: evaluate_system.py  phoenix_experiment.py  run_backend.sh  test_agent_flow.py  test_intelligence.py  test_mcp.py  test_visualization.py  verify_db.py  verify_mcp_direct.py
tests/: test_api.py
tests/eval/: gold_set.json
(+10 files in other folders)
